acciones en menu

--- a/index.html
+++ b/index.html
@@ -17,76 +17,76 @@
 <body>
     <!-- NAV Header -->
     <header>
-        <section class="contenedor">
+            <nav class="contenedor">
 
-            <div id="#" class="logo">
-                <a style="text-decoration:none" href="#">
-                    <h1><span>Radio</span>Punto</h1>
-                </a>
-            </div>
-
-
-            <div class="menu">
+                <div id="#" class="logo">
+                    <a style="text-decoration:none" href="#">
+                        <h1><span>Radio</span>Punto</h1>
+                    </a>
+                </div>
 
 
-                <ul>
-                    <li>
-                        <a href="#programas">programas</a>
-
-                        <ul class="dias-semanas">
-
-                            <li>
-                                <a href="#lunes">Lunes</a>
-                            </li>
-
-                            <li>
-                                <a href="#martes">Martes</a>
-                            </li>
-
-                            <li>
-                                <a href="#miercoles">Miércoles</a>
-                            </li>
-
-                            <li>
-                                <a href="#jueves">Jueves</a>
-                            </li>
-                            <li>
-                                <a href="#viernes">Viernes</a>
-                            </li>
-
-                            <li>
-                                <a href="#sabados">Sábados</a>
-                            </li>
-
-                            <li>
-                                <a href="#domingos">Domingos</a>
-                            </li>
-
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="#sponsors">sponsors</a>
-                    </li>
-
-                    <li>
-                        <a href="#talento">@talentoEmergente</a>
-                    </li>
-
-                    <li>
-                        <a href="#publicitate">PUBLICITATE!!</a>
-                    </li>
-
-                </ul>
+                <div class="menu">
 
 
-            </div>
+                    <ul>
+                        <li>
+                            <a href="#programas">programas</a>
 
-            <div class="hamburger">
-                <i class="fas fa-bars"></i>
-            </div>
+                            <ul class="dias-semanas">
 
-        </section>
+                                <li>
+                                    <a href="#lunes">Lunes</a>
+                                </li>
+
+                                <li>
+                                    <a href="#martes">Martes</a>
+                                </li>
+
+                                <li>
+                                    <a href="#miercoles">Miércoles</a>
+                                </li>
+
+                                <li>
+                                    <a href="#jueves">Jueves</a>
+                                </li>
+                                <li>
+                                    <a href="#viernes">Viernes</a>
+                                </li>
+
+                                <li>
+                                    <a href="#sabados">Sábados</a>
+                                </li>
+
+                                <li>
+                                    <a href="#domingos">Domingos</a>
+                                </li>
+
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a href="#sponsors">sponsors</a>
+                        </li>
+
+                        <li>
+                            <a href="#talento">@talentoEmergente</a>
+                        </li>
+
+                        <li>
+                            <a href="#publicitate">PUBLICITATE!!</a>
+                        </li>
+
+                    </ul>
+
+
+                </div>
+
+                <div class="hamburger">
+                    <i class="fas fa-bars"></i>
+                </div>
+
+            </nav>
     </header>
 
     <!-- VIDEO DE YOUTUBE -->
@@ -341,7 +341,7 @@
 
 
 
-
+    <script src="js/hmbgr.js"></script>
     <script src="https://kit.fontawesome.com/977a02dee3.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
