--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     <title>Radio Punto</title>
 </head>
 
@@ -86,7 +88,7 @@
     <!-- VIDEO DE YOUTUBE -->
     <figure class="content-media content-media--video" id="featured-media">
         <iframe class="content-media__object" id="featured-video"
-            src="https://www.youtube.com/embed/5qap5aO4i9A?autoplay=1&enablejsapi=1" frameborder="0"
+        src="https://www.youtube.com/embed/NXX71vBzqtc?autoplay=1&enablejsapi=1" frameborder="0"
             allow="accelerometer;autoplay;clipboard-write;encrypted-media;gyroscope;picture-in-picture"
             allowfullscreen></iframe>
     </figure>
@@ -269,7 +271,7 @@
     <section id="talento">
 
         <div class="talento-emergente">
-            <h3>@TALENTO EMERGENTE</h3>
+            <h3>TALENTO EMERGENTE</h3>
             <div class="texto">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Asperiores consequuntur eos ipsam nobis fugiat atque tempore voluptatum cupiditate.
