finish pseudo glitch

--- a/index.html
+++ b/index.html
@@ -298,14 +298,15 @@
 
     </section>
 
-    <!-- Publicitate! -->
+    <!-- FORMULARIO Publicitate! -->
+
+    
 
     <!--Footer-->
     <div class="irArriba"><i class="fas fa-chevron-up"></i></div>
 
     <!-- Redes -->
 
-    <!-- IG -->
     <div class="redes">
         <div class="insta"><i class="fab fa-instagram"></i></div>
         <div class="face"><i class="fab fa-facebook-f"></i></div>
