solucion de bugs

--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
               <li>
                 <a href="#viernes">Viernes</a>
               </li>
-
-              <li></li>
               <li>
                 <a href="#domingos">Domingos</a>
               </li>
@@ -81,7 +79,7 @@
   <!-- VIDEO DE YOUTUBE -->
   <figure class="content-media content-media--video" id="featured-media">
     <iframe class="content-media__object" id="featured-video"
-      src="https://www.youtube.com/embed/vADN5uWDBH0?autoplay=1&enablejsapi=1" frameborder="0"
+      src="https://www.youtube.com/embed/o2ASc0qPK8M?autoplay=1&enablejsapi=1" frameborder="0"
       allow="accelerometer;autoplay;clipboard-write;encrypted-media;gyroscope;picture-in-picture"
       allowfullscreen></iframe>
   </figure>
@@ -314,6 +312,23 @@
   </section>
 
   <!-- FORMULARIO Publicitate! -->
+
+  <section id="publicitate">
+
+    <form action="" method="POST">
+      <label>CONTACTANOS</label></br>
+      <select name="motivo">
+        <option value="1">Quiero que mi publicidad suene en la Radio!</option>
+        <option value="2">Talento Emergente</option>
+      </select></br>
+      <input type="text" name="nombre" placeholder="Nombre" ></input></br>
+      <input type="text" name="correo" placeholder="Correo"></input></br>
+      <input type="text" name="telefono" placeholder="Telefono"></input></br>
+      <textarea name="mensaje"></textarea></br>
+      <input type="button" value="Enviar" id="boton"></input>
+    </form>
+
+  </section>
 
   <!--Footer-->
   <div class="irArriba"><i class="fas fa-chevron-up"></i></div>
