--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </li>
 
           <li>
-            <a href="#publicitate">PUBLICITATE!!</a>
+            <a href="#contacto">Contacto</a>
           </li>
         </ul>
       </div>
@@ -311,9 +311,9 @@
     </div>
   </section>
 
-  <!-- FORMULARIO Publicitate! -->
+  <!-- FORMULARIO contacto! -->
   <div class="frm">
-    <form id="publicitate" action="" method="POST">
+    <form id="contacto" action="" method="POST">
       <label><h3>CONTACTANOS</h3></label></br>
       <select name="motivo">
         <option value="1" selected="true" disabled="disabled">Seleccione Motivo</option>
@@ -367,11 +367,3 @@
 </body>
 
 </html>
-
-<!--<div class="redes">
-                <div class="social-media">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                </div>
-            </div> -->
