--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </li>
 
           <li>
-            <a href="#talento">@talentosEmergentes</a>
+            <a href="#talento">TalentoEmergente</a>
           </li>
 
           <li>
@@ -79,7 +79,7 @@
   <!-- VIDEO DE YOUTUBE -->
   <figure class="content-media content-media--video" id="featured-media">
     <iframe class="content-media__object" id="featured-video"
-      src="https://www.youtube.com/embed/o2ASc0qPK8M?autoplay=1&enablejsapi=1" frameborder="0"
+      src="https://www.youtube.com/embed/5qap5aO4i9A?autoplay=1&enablejsapi=1" frameborder="0"
       allow="accelerometer;autoplay;clipboard-write;encrypted-media;gyroscope;picture-in-picture"
       allowfullscreen></iframe>
   </figure>
@@ -277,7 +277,7 @@
   <!-- Talento Emergente -->
   <section id="talento">
     <div class="talento-emergente">
-      <h3>T@LENTØ§ ËMERGËNTE§</h3>
+      <h3>TALENTO EMERGENTE</h3>
       <div class="texto">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
@@ -321,8 +321,8 @@
         <option value="3">Talento Emergente</option>
       </select></br>
       <input type="text" name="nombre" placeholder="Nombre" autocomplete="off"></input></br>
-      <input type="text" name="correo" placeholder="Correo"></input></br>
-      <input type="text" name="telefono" placeholder="Telefono"></input></br>
+      <input type="text" name="correo" placeholder="Correo" ></input></br>
+      <input type="text" name="telefono" placeholder="Telefono" ></input></br>
       <textarea name="mensaje"></textarea></br>
       <input type="button" value="Enviar" id="boton"></input>
     </form>
