--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="contenedor">
       <div id="#" class="logo">
         <a style="text-decoration: none" href="#">
-          <h1><span>RadiE</span>Punto</h1>
+          <h1><span>Radio</span>Punto</h1>
         </a>
       </div>
 
@@ -49,6 +49,9 @@
               </li>
               <li>
                 <a href="#viernes">Viernes</a>
+              </li>
+              <li>
+                <a href="#sabados">Sabados</a>
               </li>
               <li>
                 <a href="#domingos">Domingos</a>
