pasado a rutas relativas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap" rel="stylesheet" />
@@ -361,12 +361,12 @@
     </div>
   </footer>
 
-  <script src="js/hmbgr.js"></script>
+  <script src="../hmbgr.js"></script>
   <script src="https://kit.fontawesome.com/977a02dee3.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
-  <script src="js/actions.js"></script>
-  <script src="js/arriba.js"></script>
+  <script src="../actions.js"></script>
+  <script src="../arriba.js"></script>
 </body>
 
 </html>
